--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-right: 20px;
     
   }
 
@@ -190,7 +191,9 @@ main {
     
 }
 
-
+.footer-nav{
+    padding: 0;
+}
 
 .footer-nav img {
     width: 36px;
