--- a/styles.css
+++ b/styles.css
@@ -180,7 +180,7 @@ main {
 
 .image-grid-1 {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Adjust the size as needed */
+    grid-template-columns: repeat(3, minmax(300px, 1fr)); /* Adjust the size as needed */
     gap: 5px; /* Adjust the gap between images */
     justify-content: center;
     align-items: center;
