--- a/styles.css
+++ b/styles.css
@@ -179,10 +179,10 @@ main {
   }
 
 .image-grid-1 {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 500px)); /* Adjust the size as needed */
-    gap: 5px; /* Adjust the gap between images */
-    justify-items: center;
+    display: inline-flex;
+  /*  grid-template-columns: repeat(auto-fit, minmax(400px, 500px)); /* Adjust the size as needed */
+  /*  gap: 5px; /* Adjust the gap between images */ 
+    justify-content: center;
     align-items: center;
   }
   
